# alisa

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.md.initial  ai_advisor.py  ai_cache.py  auth_session.py  check_channels.py  config.py  daily_digest.py  database.py  dedup_cache.py  feed_store.py  find_mrkt_links.py  floor_cache.py  fly.toml  fragment_scraper.py  getgems_scraper.py  logic.py  main.py  mini_app_scraper.py  notifier.py  rate_provider.py  render.yaml  requirements.txt  run.py  settings_store.py  test_mrkt.py  tg_message_parser.py  url_builder.py  userbot.py  webapp_server.py
webapp/static/: index.html
webapp_backend/: Dockerfile  app.py  fly.toml  pyproject.toml
webapp_backend/static/: index.html
